--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.12.0",
     "fs": "0.0.1-security",
     "iview": "^3.3.0",
     "less": "^3.0.4",
